OtoFileManager: Add feature about Seafile
Now can sync file from seafile, but most of users may not have seafile
account, either the seafile has no layout logic.

Signed-off-by: Wang Zhixu <potatomagic@163.com>
Signed-off-by: Chen Gang <chengang@emindsoft.com.cn>