@@ -1,21 +1,74 @@
 package com.openthos.filemanager.utils;
 
+
+import android.content.Context;
+import android.database.Cursor;
+import android.database.sqlite.SQLiteDatabase;
+import android.os.Environment;
+import android.util.Log;
+
+import com.openthos.filemanager.system.SeafileSQLiteHelper;
+
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
 
-public class SeafileUtils{
-    public static final String SEAFILE_CONFIGPATH = "/data/";
-    public static final String SEAFILE_CONFIGNAME = "seafile-config";
-    public static final String SEAFILE_NETNAME = ".ccnet";
-    public static final String SEAFILE_BASE_COMMAND ="seaf-cli";
-    public static final String SEAFILE_BASE_COMMAND1 ="./data/sea/proot.sh";
-    public static final String SEAFILE_BASE_COMMAND2 ="-b";
-    public static final String SEAFILE_BASE_COMMAND3 ="/data/data/test:/data";
-    public static final String SEAFILE_BASE_URL = "https://dev.openthos.org/";
+import static android.R.attr.id;
+
+/**
+ * Created by Wang Zhixu on 12/23/16.
+ */
+
+public class SeafileUtils {
+    public static final String SEAFILE_PROOT_BASEPATH = "/data";
+    public static final String SEAFILE_CONFIG_PATH = "/data/seafile-config";
+    public static final String SEAFILE_DATA_PATH = "/sdcard/.seafile-data";
+
+    public static final String SEAFILE_NET_NAME = ".ccnet";
+
+    public static final String SEAFILE_COMMAND_SEAFILE = "seaf-cli ";
+    public static final String SEAFILE_COMMAND_PROOT = "./data/sea/proot.sh -b ";
+    public static final String SEAFILE_COMMAND_PROOT_BASE = "./data/sea/proot.sh ";
+
+    public static final String SEAFILE_BASE_ARG = "-b";
+    public static final String SEAFILE_BASE_URL = "-s https://dev.openthos.org/ ";
+    public static String SEAFILE_BASE_ROOT_PATH = "/data/seafile-config:/data/seafile-config ";
+
     public static final int SEAFILE_ID_LENGTH = 36;
+
+    public static String mUserId = "";
+    public static String mUserPassword = "";
+
+    public static String getUserAccount() {
+        return "-u " + mUserId + " -p " + mUserPassword;
+    }
+
+    private static void exec(String[] commands) {
+        Process pro;
+        BufferedReader in = null;
+        try {
+            pro = Runtime.getRuntime().exec(commands);
+            in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
+            String line;
+            while ((line = in.readLine()) != null) {
+                Log.i("wwwww", line);
+                if (line.contains("Started: seafile daemon")) {
+                    break;
+                }
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        } finally {
+            if (in != null) {
+                try {
+                    in.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
 
     public static void main(String[] args) {
         //init();
@@ -31,19 +84,101 @@ public class SeafileUtils{
         //desync(SEAFILE_CONFIGPATH + "sea/zhangsan");
     }
 
-    public static void desync(String fileName) {
-        String arg0 = "desync";
-        String arg1 = "-d";
-        Runtime runtime = Runtime.getRuntime();
+    public static void init() {
+        File config = new File(SEAFILE_CONFIG_PATH);
+        if (!config.exists()) {
+            config.mkdirs();
+        }
+        exec(new String[]{"su","-c",SEAFILE_COMMAND_PROOT
+                + SEAFILE_BASE_ROOT_PATH + SEAFILE_COMMAND_SEAFILE + "init -d "
+                + config.getAbsolutePath()});
+    }
+
+    public static void start() {
+        exec(new String[]{"su","-c", SEAFILE_COMMAND_PROOT
+                + SEAFILE_BASE_ROOT_PATH + SEAFILE_COMMAND_SEAFILE + "start"});
+    }
+
+    public static void stop() {
+        exec(new String[]{"su","-c",SEAFILE_COMMAND_PROOT
+                + SEAFILE_BASE_ROOT_PATH + SEAFILE_COMMAND_SEAFILE + "stop"});
+    }
+
+
+    public static String listRemote() {
+        Process pro;
+        BufferedReader in = null;
+        StringBuffer sb = new StringBuffer();
+        try {
+            pro = Runtime.getRuntime().exec(new String[]{"su","-c",SEAFILE_COMMAND_PROOT
+                    + SEAFILE_BASE_ROOT_PATH + SEAFILE_COMMAND_SEAFILE + "list-remote "
+                    + SEAFILE_BASE_URL + getUserAccount()});
+            in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
+            String line;
+            sb.append("[");
+            boolean isOut = false;
+            while ((line = in.readLine()) != null) {
+                if (line.contains("Name") && line.contains("ID")) {
+                    isOut = true;
+                    continue;
+                }
+                if (line.contains("ISO(ota)")) {
+                    isOut = false;
+                    continue;
+                }
+                if (isOut) {
+                    if (line.length() > SEAFILE_ID_LENGTH) {
+                        String id = line.substring(line.length() - SEAFILE_ID_LENGTH);
+                        sb.append("{\"id\":\"" + id);
+                        String name = line.replace(" " + id, "");
+                        sb.append("\",\"name\":\"" + name + "\"},");
+                    }
+                }
+            }
+            sb.delete(sb.length() - 1, sb.length());
+            sb.append("]");
+            Log.i("wwwww", sb.toString());
+        } catch (IOException e) {
+            e.printStackTrace();
+        } finally {
+            if (in != null) {
+                try {
+                    in.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+        return sb.toString();
+    }
+
+    public static void download(String libraryid, String filePath) {
+        filePath = filePath.trim().replace(" ", "\\ ");
         Process pro;
         BufferedReader in = null;
         try {
-            pro = runtime.exec(new String[]{SEAFILE_BASE_COMMAND1, SEAFILE_BASE_COMMAND2,
-                               SEAFILE_BASE_COMMAND3, SEAFILE_BASE_COMMAND, arg0, arg1, fileName});
+            pro = Runtime.getRuntime().exec(new String[]{"su","-c", SEAFILE_COMMAND_PROOT_BASE
+                    + "mkdir -p " + SEAFILE_PROOT_BASEPATH + filePath});
             in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
             String line;
             while ((line = in.readLine()) != null) {
-               System.out.println(line);
+                Log.i("wwwwww", line);
+            }
+            pro = Runtime.getRuntime().exec(new String[]{"su","-c",SEAFILE_COMMAND_PROOT +
+                    SEAFILE_BASE_ROOT_PATH + " -b "
+                    + filePath + ":" + SEAFILE_PROOT_BASEPATH + filePath + " "
+                    + SEAFILE_COMMAND_SEAFILE + "download -l " + libraryid + " -d "
+                    + SEAFILE_PROOT_BASEPATH + filePath + " "
+                    + SEAFILE_BASE_URL + getUserAccount()});
+            Log.i("wwwwww", SEAFILE_COMMAND_PROOT +
+                    SEAFILE_BASE_ROOT_PATH + " -b "
+                    + filePath + ":" + SEAFILE_PROOT_BASEPATH + filePath + " "
+                    + SEAFILE_COMMAND_SEAFILE + "download -l " + libraryid + " -d "
+                    + SEAFILE_PROOT_BASEPATH + filePath + " "
+                    + SEAFILE_BASE_URL + getUserAccount());
+            in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
+            while ((line = in.readLine()) != null) {
+                Log.i("wwwwww", line);
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -58,14 +193,43 @@ public class SeafileUtils{
         }
     }
 
+
+    public static void desync(String fileName) {
+        String arg0 = "desync";
+        String arg1 = "-d";
+        Runtime runtime = Runtime.getRuntime();
+        Process pro;
+        BufferedReader in = null;
+        try {
+            pro = runtime.exec(new String[]{SEAFILE_COMMAND_PROOT, SEAFILE_BASE_ARG,
+                    "", SEAFILE_COMMAND_SEAFILE, arg0, arg1, fileName});
+            in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
+            String line;
+            while ((line = in.readLine()) != null) {
+                System.out.println(line);
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        } finally {
+            if (in != null) {
+                try {
+                    in.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+
+
     public static void status() {
         String arg0 = "status";
         Runtime runtime = Runtime.getRuntime();
         Process pro;
         BufferedReader in = null;
         try {
-            pro = runtime.exec(new String[]{SEAFILE_BASE_COMMAND1, SEAFILE_BASE_COMMAND2,
-                                     SEAFILE_BASE_COMMAND3, SEAFILE_BASE_COMMAND, arg0});
+            pro = Runtime.getRuntime().exec(new String[]{SEAFILE_COMMAND_PROOT, SEAFILE_BASE_ARG,
+                    "", SEAFILE_COMMAND_SEAFILE, arg0});
             in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
             String line;
             while ((line = in.readLine()) != null) {
@@ -95,13 +259,13 @@ public class SeafileUtils{
         Process pro;
         BufferedReader in = null;
         try {
-            pro = runtime.exec(new String[]{SEAFILE_BASE_COMMAND1, SEAFILE_BASE_COMMAND2,
-                     SEAFILE_BASE_COMMAND3, SEAFILE_BASE_COMMAND, arg0, arg1, id,
-                     arg2, SEAFILE_BASE_URL, arg3, fileName, arg4, userName, arg5, userPassword});
+            pro = runtime.exec(new String[]{SEAFILE_COMMAND_PROOT, SEAFILE_BASE_ARG,
+                    "", SEAFILE_COMMAND_SEAFILE, arg0, arg1, id,
+                    arg2, SEAFILE_BASE_URL, arg3, fileName, arg4, userName, arg5, userPassword});
             in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
             String line;
             while ((line = in.readLine()) != null) {
-               System.out.println(line);
+                System.out.println(line);
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -116,37 +280,6 @@ public class SeafileUtils{
         }
     }
 
-    public static void download(String id, String fileName, String userName, String userPassword) {
-        String arg0 = "download";
-        String arg1 = "-l";
-        String arg2 = "-s";
-        String arg3 = "-d";
-        String arg4 = "-u";
-        String arg5 = "-p";
-        Runtime runtime = Runtime.getRuntime();
-        Process pro;
-        BufferedReader in = null;
-        try {
-            pro = runtime.exec(new String[]{SEAFILE_BASE_COMMAND1, SEAFILE_BASE_COMMAND2,
-                     SEAFILE_BASE_COMMAND3, SEAFILE_BASE_COMMAND, arg0, arg1, id, arg2,
-                     SEAFILE_BASE_URL, arg3, fileName, arg4, userName, arg5, userPassword});
-            in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
-            String line;
-            while ((line = in.readLine()) != null) {
-               System.out.println(line);
-            }
-        } catch (IOException e) {
-            e.printStackTrace();
-        } finally {
-            if (in != null) {
-                try {
-                    in.close();
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
-            }
-        }
-    }
 
     public static String create(String fileName, String userName, String userPassword) {
         String arg0 = "create";
@@ -159,9 +292,9 @@ public class SeafileUtils{
         BufferedReader in = null;
         String id = "";
         try {
-            pro = runtime.exec(new String[]{SEAFILE_BASE_COMMAND1, SEAFILE_BASE_COMMAND2,
-                               SEAFILE_BASE_COMMAND3, SEAFILE_BASE_COMMAND, arg0, arg1, fileName,
-                               arg2, SEAFILE_BASE_URL, arg3, userName, arg4, userPassword});
+            pro = runtime.exec(new String[]{SEAFILE_COMMAND_PROOT, SEAFILE_BASE_ARG,
+                    "", SEAFILE_COMMAND_SEAFILE, arg0, arg1, fileName,
+                    arg2, SEAFILE_BASE_URL, arg3, userName, arg4, userPassword});
             in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
             String line;
             while ((line = in.readLine()) != null) {
@@ -181,117 +314,6 @@ public class SeafileUtils{
         return id;
     }
 
-    public static String listRemote(String userName, String userPassword) {
-        String arg0 = "list-remote";
-        String arg1 = "-s";
-        String arg2 = "-u";
-        String arg3 = "-p";
-        Runtime runtime = Runtime.getRuntime();
-        Process pro;
-        BufferedReader in = null;
-        StringBuffer sb = new StringBuffer();
-        try {
-            pro = runtime.exec(new String[]{SEAFILE_BASE_COMMAND1, SEAFILE_BASE_COMMAND2,
-                               SEAFILE_BASE_COMMAND3, SEAFILE_BASE_COMMAND, arg0, arg1,
-                               SEAFILE_BASE_URL, arg2, userName, arg3, userPassword});
-            in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
-            String line;
-            sb.append("[");
-            while ((line = in.readLine()) != null) {
-                if(line.length() > SEAFILE_ID_LENGTH) {
-                   String id = line.substring(line.length() - SEAFILE_ID_LENGTH);
-                   sb.append("{\"id\":\"" + id);
-                   String name = line.replace(" " + id, "");
-                   sb.append("\",\"name\":\""+ name +"\"},");
-                }
-            }
-            sb.delete(sb.length() - 1, sb.length());
-            sb.append("]");
-        } catch (IOException e) {
-            e.printStackTrace();
-        } finally {
-            if (in != null) {
-                try {
-                    in.close();
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
-            }
-        }
-        return sb.toString();
-    }
-
-    public static void stop() {
-        String arg0 = "stop";
-        Runtime runtime = Runtime.getRuntime();
-        Process pro;
-        try {
-            pro = runtime.exec(new String[]{SEAFILE_BASE_COMMAND1, SEAFILE_BASE_COMMAND2,
-                               SEAFILE_BASE_COMMAND3, SEAFILE_BASE_COMMAND, arg0});
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-
-    public static void start() {
-        String arg0 = "start";
-        Runtime runtime = Runtime.getRuntime();
-        Process pro;
-        BufferedReader in = null;
-        try {
-            pro = runtime.exec(new String[]{SEAFILE_BASE_COMMAND1, SEAFILE_BASE_COMMAND2,
-                               SEAFILE_BASE_COMMAND3, SEAFILE_BASE_COMMAND, arg0});
-            in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
-            String line;
-            while ((line = in.readLine()) != null) {
-            }
-        } catch (IOException e) {
-            e.printStackTrace();
-        } finally {
-            if (in != null) {
-                try {
-                    in.close();
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
-            }
-        }
-    }
-
-    public static void init() {
-        String arg0 = "init";
-        String arg1 = "-d";
-        File net = new File(SEAFILE_CONFIGPATH, SEAFILE_NETNAME);
-        File config = new File(SEAFILE_CONFIGPATH, SEAFILE_CONFIGNAME);
-        if (net.exists()){
-            delete(net);
-        }
-        if (!config.exists()) {
-            config.mkdir();
-        }
-        Runtime runtime = Runtime.getRuntime();
-        Process pro;
-        BufferedReader in = null;
-        try {
-            pro = runtime.exec(new String[]{SEAFILE_BASE_COMMAND1, SEAFILE_BASE_COMMAND2,
-                               SEAFILE_BASE_COMMAND3, SEAFILE_BASE_COMMAND, arg0, arg1,
-                               SEAFILE_CONFIGPATH + SEAFILE_CONFIGNAME});
-            in = new BufferedReader(new InputStreamReader(pro.getInputStream()));
-            String line;
-            while ((line = in.readLine()) != null) {
-            }
-        } catch (IOException e) {
-            e.printStackTrace();
-        } finally {
-            if (in != null) {
-                try {
-                    in.close();
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
-            }
-        }
-    }
 
     public static void delete(File file) {
         if (file.exists()) {
@@ -300,7 +322,7 @@ public class SeafileUtils{
             if (file.isFile()) {
                 arg = "-v";
             } else if (file.isDirectory()) {
-               arg = "-rv";
+                arg = "-rv";
             }
             Runtime runtime = Runtime.getRuntime();
             try {
@@ -308,6 +330,55 @@ public class SeafileUtils{
             } catch (IOException e) {
                 e.printStackTrace();
             }
+        }
+    }
+
+    public static class SeafileSQLConsole {
+        SeafileSQLiteHelper mSeafileSQLiteHelper;
+
+        public SeafileSQLConsole(Context context) {
+            mSeafileSQLiteHelper = new SeafileSQLiteHelper(context, SeafileSQLiteHelper.NAME,
+                    null, SeafileSQLiteHelper.VERSION);
+            SQLiteDatabase db = mSeafileSQLiteHelper.getWritableDatabase();
+            db.close();
+        }
+
+        public int queryAccountId(String account) {
+            int id = 0;
+            SQLiteDatabase db = mSeafileSQLiteHelper.getWritableDatabase();
+            Cursor c = db.rawQuery("select * from seafileaccount where username like ?",
+                    new String[]{account});
+            while (c.moveToNext()) {
+                id = c.getInt(c.getColumnIndex("id"));
+            }
+            c.close();
+            if (id == 0) {
+                db.execSQL("insert into seafileaccount (username) " +
+                        "values ('" + account + "')");
+                id = queryAccountId(account);
+            }
+            db.close();
+            return id;
+        }
+
+        public int queryFile(int userId, String libraryId, String libraryName) {
+            int isSync = -1;
+            SQLiteDatabase db = mSeafileSQLiteHelper.getWritableDatabase();
+            Cursor c = db.rawQuery("select * from seafilefile where userid like ?"
+                            + " and libraryid like ? and libraryname like ?",
+                    new String[]{userId + "", libraryId, libraryName});
+            while (c.moveToNext()) {
+                isSync = c.getInt(c.getColumnIndex("isSync"));
+            }
+            c.close();
+            if (isSync == -1) {
+                db.execSQL("insert into seafilefile (userid,libraryid,libraryname,isSync) "
+                        + "values (" + userId + ",'" + libraryId
+                        + "' ,'" + libraryName + "'," + 0 + ")");
+                isSync = queryFile(userId, libraryId, libraryName);
+            }
+            db.close();
+            return isSync;
         }
     }
 }
